# avioflow

./: .gitignore  CMakeLists.txt  README.md  build-wheels.ps1  build-wheels.sh  build.ps1  build.sh  file_strip.ps1  log.txt  package-lock.json  package.json  pyproject.toml  strip_test_results.txt
.github/: RELEASE_TAGS.md
.github/workflows/: npm-publish.yml  release.yml
avioflow/core/ffmpeg/: avio-context-handler.cpp  avio-context-handler.h  device-handler.cpp  device-handler.h  ffmpeg-common.h  io-handler.cpp  io-handler.h  metadata.h  single-stream-decoder.cpp  single-stream-decoder.h
avioflow/core/wasapi/: wasapi-handler.cpp  wasapi-handler.h
avioflow/include/: avioflow-cxx-api.cpp  avioflow-cxx-api.h  metadata.h
avioflow/nodejs/: CMakeLists.txt  bindings.cpp  index.js
avioflow/python/: CMakeLists.txt  bindings.cpp  test_audio_load.py
avioflow/python/avioflow/: __init__.py
cmake/: ffmpeg-linux-shared.cmake  ffmpeg-linux-static.cmake  ffmpeg-win-shared.cmake  ffmpeg-win-static.cmake  ffmpeg.cmake  miniaudio.cmake  pybind11.cmake
tests/: CMakeLists.txt  avio-online-load-audio.cpp  avioflow-microphone-capture.cpp  avioflow-wasapi-capture.cpp  decode_test.cpp  ffmpeg-audio-load.cpp  test_framework.h
tests/ffmpeg/: decoder-load-test.cpp  decoder-resample-test.cpp  device-list-test.cpp
tests/ffmpeg/decoder/: resample-test.cpp  test_decoder.cpp  test_decoder_load.cpp  test_decoder_resample.cpp
tests/nodejs/: test-local.js  test-npm-load.js
tests/python/: test.sh  test_audio_load.py
vscode-extension/: .gitignore  .vscodeignore  package.json  tsconfig.json
vscode-extension/src/: AudioPreviewProvider.ts  HomeViewProvider.ts  extension.ts
vscode-extension/webview/: vite.config.mts
vscode-extension/webview/src/: App.svelte
