[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "avioflow"
version = "0.1.2"
description = "High-performance audio decoding with FFmpeg and C++"
readme = "README.md"
authors = [{name = "lxp3"}]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
# Pass options to CMake
cmake.args = [
    "-DENABLE_PYTHON=ON",
    "-DENABLE_WASAPI=ON",
    "-DBUILD_TESTS=OFF",
]

# Ensure the build directory is separate
build-dir = "build/{wheel_tag}"

# We only want to include the files that are installed via CMake
# scikit-build-core handles this automatically when using build-backend
